jqGrid依赖配置，jqGrid 外置搜索栏配置。

--- a/tpls/index.html
+++ b/tpls/index.html
@@ -15,13 +15,14 @@
 		<![endif]-->
 
 		<!-- page specific plugin styles -->
+		<link rel="stylesheet" href="../components/stylesheets/jquery-ui-1.10.3.full.min.css">
+		<link rel="stylesheet" href="../components/plugins/jqGrid/css/ui.jqgrid.css">
 
 		<!-- fonts 
 
 		<link rel="stylesheet" href="assets\css\cyrillic.css" />
 -->
 		<!-- ace styles -->
-
 		<link rel="stylesheet" href="../components/stylesheets/ace/ace.min.css" />
 		<link rel="stylesheet" href="../components/stylesheets/ace/ace-rtl.min.css" />
 		<link rel="stylesheet" href="../components/stylesheets/ace/ace-my-skins.css" />
