--- a/tpls/navTreeItem.html
+++ b/tpls/navTreeItem.html
@@ -1,4 +1,4 @@
-<a class="{{resnode.sType==0?'dropdown-toggle':''}}" ui-sref="{{resnode.sType==0?'':resnode.sName}}" href="#" ng-click="navClick(resnode,$event)">
+<a class="{{resnode.sType==0?'dropdown-toggle':''}}" ui-sref="{{resnode.sType==0?'':resnode.id}}" href="#" ng-click="navClick(resnode,$event)">
     <i class="{{resnode.sParentId?'icon-double-angle-right':resnode.sIcon}}"></i>
     <span class="menu-text">{{resnode.sName}}</span>
     <b ng-if="resnode.sType==0" class="arrow icon-angle-down"></b>
