--- a/tpls/knowledgeRepo/search.html
+++ b/tpls/knowledgeRepo/search.html
@@ -63,21 +63,27 @@
                     <div class="input-group">
                         <select ng-model="orderBy" class="form-control" ng-change="search(response.data.page)"
                                 style="width: auto;float: right">
-                            <option id="relevance" value="1">相关度</option>
-                            <option id="useCount" value="2">使用次数</option>
-                            <option id="relevanceAndUseCount" value="3">相关度和使用次数</option>
+                            <option value="1">相关度</option>
+                            <option value="2">使用次数</option>
+                            <option value="3">相关度和使用次数</option>
+                        </select>
+                        <select ng-model="order" class="form-control" ng-change="search(response.data.page)"
+                                style="width: auto;float: right">
+                            <option value="1">升序</option>
+                            <option value="2">降序</option>
                         </select>
                         <span class="input-group-addon">排序规则</span>
                     </div>
                 </li>
                 <li ng-repeat="result in response.data.list" class="resultItem">
                     <div class="result-header">
-                        <h3><a href="{{result.id}}" ng-bind-html="result.kTitle"></a></h3>
+                        <h3><a href="knowledgeDetail.html?detailId={{result.id}}" ng-bind-html="result.kTitle"></a></h3>
                     </div>
                     <div class="result-body" ng-bind-html="result.kAnswer">
                     </div>
                     <div class="result-footer">
-                        使用次数:{{result.kUseCount}}
+                        使用次数:{{result.kUseCount}}&nbsp;&nbsp;
+                        相关程度:{{result.score}}
                     </div>
                 </li>
             </ul>
@@ -111,7 +117,7 @@
 <script>
     var search = angular.module("search", ['ngSanitize']);
     search.controller("searchController", ["$scope", "$http", function ($scope, $http) {
-        $scope.displayResult = false;
+        $scope.displayResult =false;
         /* $scope.results = [
              {
                  id: "sdf",
@@ -140,7 +146,8 @@
                 pageNum: 1
             },
         };
-        $scope.orderBy = 1;
+        $scope.orderBy = "1";
+        $scope.order = "1";
         $scope.search = function (page) {
             if (!page && page != 0)
                 page = 1;
@@ -151,7 +158,7 @@
             $http({
                 method: "GET",
                 url: "http://localhost:8080/knowledgeRepo/repo/searchIndex.form?keyWord=" + $scope.keyWord
-                + "&page=" + page + "&orderBy=" + $scope.orderBy,
+                + "&page=" + page + "&orderBy=" + $scope.orderBy + "&order=" + $scope.order,
             }).then(function successCallback(response) {
                 if (response.data.data.pages > 0) {
                     $scope.response = response.data;
