--- a/tpls/knowledgeDetail.html
+++ b/tpls/knowledgeDetail.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>解答详细</title>
-    <link rel="stylesheet" href="../../components/stylesheets/bootstrap.min.css"/>
-    <link rel="stylesheet" href="../../components/plugins/toastr/toastr.css">
+    <link rel="stylesheet" href="../components/stylesheets/bootstrap.min.css"/>
+    <link rel="stylesheet" href="../components/plugins/toastr/toastr.css">
     <style>
         .item {
             margin: 15px 0;
@@ -78,12 +78,10 @@
         </div>
     </div>
 </div>
-<script type="text/javascript" src="../../components/javascripts/jquery-2.0.3.min.js"></script>
-<script type="text/javascript" src="../../components/javascripts/bootstrap/bootstrap.min.js"></script>
-<script type="text/javascript" src="../../components/javascripts/bootstrap/bootstrap-typeahead.js"></script>
-<script type="text/javascript" src="../../components/plugins/toastr/toastr.min.js"></script>
-<script type="text/javascript" src="../../components/javascripts/angular.min.js"></script>
-<script type="text/javascript" src="../../components/javascripts/angular-sanitize.min.js"></script>
+<script type="text/javascript" src="../components/javascripts/jquery-2.0.3.min.js"></script>
+<script type="text/javascript" src="../components/javascripts/bootstrap/bootstrap.min.js"></script>
+<script type="text/javascript" src="../components/plugins/toastr/toastr.min.js"></script>
+<script type="text/javascript" src="../components/javascripts/angular.min.js"></script>
 <script>
     var detail = angular.module("detail", []);
 
