--- a/tpls/search.html
+++ b/tpls/search.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>知识库</title>
-    <link rel="stylesheet" href="../../components/stylesheets/bootstrap.min.css"/>
-    <link rel="stylesheet" href="../../components/plugins/toastr/toastr.css">
+    <link rel="stylesheet" href="../components/stylesheets/bootstrap.min.css"/>
+    <link rel="stylesheet" href="../components/plugins/toastr/toastr.css">
     <style>
         .resultItem {
             list-style-type: none;
@@ -108,39 +108,16 @@
     </div>
 </div>
 </div>
-<script type="text/javascript" src="../../components/javascripts/jquery-2.0.3.min.js"></script>
-<script type="text/javascript" src="../../components/javascripts/bootstrap/bootstrap.min.js"></script>
-<script type="text/javascript" src="../../components/javascripts/bootstrap/bootstrap-typeahead.js"></script>
-<script type="text/javascript" src="../../components/plugins/toastr/toastr.min.js"></script>
-<script type="text/javascript" src="../../components/javascripts/angular.min.js"></script>
-<script type="text/javascript" src="../../components/javascripts/angular-sanitize.min.js"></script>
+<script type="text/javascript" src="../components/javascripts/jquery-2.0.3.min.js"></script>
+<script type="text/javascript" src="../components/javascripts/bootstrap/bootstrap.min.js"></script>
+<script type="text/javascript" src="../components/javascripts/bootstrap/bootstrap-typeahead.js"></script>
+<script type="text/javascript" src="../components/plugins/toastr/toastr.min.js"></script>
+<script type="text/javascript" src="../components/javascripts/angular.min.js"></script>
+<script type="text/javascript" src="../components/javascripts/angular-sanitize.min.js"></script>
 <script>
     var search = angular.module("search", ['ngSanitize']);
     search.controller("searchController", ["$scope", "$http", function ($scope, $http) {
-        $scope.displayResult =false;
-        /* $scope.results = [
-             {
-                 id: "sdf",
-                 kTitle: "hello<em>world</em>",
-                 kAnswer: "hs<em>fds</em>fsdfdsfds",
-                 kUseCount: 20,
-                 createTime: new Date().toLocaleString()
-             },
-             {
-                 id: "sdfdsf",
-                 kTitle: "vdsfdsfsdadf",
-                 kAnswer: "avvvsdfds",
-                 kUseCount: 20,
-                 createTime: new Date().toLocaleString()
-             },
-             {
-                 id: "sdf",
-                 kTitle: "<em>hello</em>",
-                 kAnswer: "hsfdsfsdfdsfds",
-                 kUseCount: 20,
-                 createTime: new Date().toLocaleString()
-             },
-         ];*/
+        $scope.displayResult = false;
         $scope.response = {
             data: {
                 pageNum: 1
@@ -155,12 +132,16 @@
                 toastr.error("页码错误");
                 return;
             }
+            if (!$scope.keyWord) {
+                toastr.error("关键字不能为空");
+                return;
+            }
             $http({
                 method: "GET",
                 url: "http://localhost:8080/knowledgeRepo/repo/searchIndex.form?keyWord=" + $scope.keyWord
                 + "&page=" + page + "&orderBy=" + $scope.orderBy + "&order=" + $scope.order,
             }).then(function successCallback(response) {
-                if (response.data.data.pages > 0) {
+                if (response.data.flag == 200 && response.data.data.pages > 0) {
                     $scope.response = response.data;
                     $scope.displayResult = true;
                 } else {
@@ -180,9 +161,6 @@
             updater: function (item) {
                 return item.replace(/<a(.+?)<\/a>/, ""); //这里一定要return，否则选中不显示
             },
-            /*            afterSelect: function (item) {
-                            alert(item);
-                        },*/
             items: 6, //显示6条
             delay: 500 //延迟时间
         });
