路由配置修改 config.lazylod.js是路由需要加载的静态css、js的配置文件 config.router.js为路由配置文件

--- a/tpls/index.html
+++ b/tpls/index.html
@@ -15,8 +15,8 @@
 		<![endif]-->
 
 		<!-- page specific plugin styles -->
-		<link rel="stylesheet" href="../components/stylesheets/jquery-ui-1.10.3.full.min.css">
-		<link rel="stylesheet" href="../components/plugins/jqGrid/css/ui.jqgrid.css">
+		<!--<link rel="stylesheet" href="../components/stylesheets/jquery-ui-1.10.3.full.min.css">-->
+		<!--<link rel="stylesheet" href="../components/plugins/jqGrid/css/ui.jqgrid.css">-->
 
 		<!-- fonts 
 
@@ -69,71 +69,71 @@
 					
 					<ul class="nav ace-nav">
 
-						<li class="purple">
-							<a data-toggle="dropdown" class="dropdown-toggle" href="#">
-								<i class="icon-bell-alt icon-animated-bell"></i>
-								<span class="badge badge-important">8</span>
-							</a>
+						<!--<li class="purple">-->
+							<!--<a data-toggle="dropdown" class="dropdown-toggle" href="#">-->
+								<!--<i class="icon-bell-alt icon-animated-bell"></i>-->
+								<!--<span class="badge badge-important">8</span>-->
+							<!--</a>-->
 
-							<ul class="pull-right dropdown-navbar navbar-pink dropdown-menu dropdown-caret dropdown-close">
-								<li class="dropdown-header">
-									<i class="icon-warning-sign"></i>
-									8条通知
-								</li>
+							<!--<ul class="pull-right dropdown-navbar navbar-pink dropdown-menu dropdown-caret dropdown-close">-->
+								<!--<li class="dropdown-header">-->
+									<!--<i class="icon-warning-sign"></i>-->
+									<!--8条通知-->
+								<!--</li>-->
 
-								<li>
-									<a href="#">
-										<div class="clearfix">
-											<span class="pull-left">
-												<i class="btn btn-xs no-hover btn-pink icon-comment"></i>
-												新闻评论
-											</span>
-											<span class="pull-right badge badge-info">+12</span>
-										</div>
-									</a>
-								</li>
+								<!--<li>-->
+									<!--<a href="#">-->
+										<!--<div class="clearfix">-->
+											<!--<span class="pull-left">-->
+												<!--<i class="btn btn-xs no-hover btn-pink icon-comment"></i>-->
+												<!--新闻评论-->
+											<!--</span>-->
+											<!--<span class="pull-right badge badge-info">+12</span>-->
+										<!--</div>-->
+									<!--</a>-->
+								<!--</li>-->
 
-								<li>
-									<a href="#">
-										<i class="btn btn-xs btn-primary icon-user"></i>
-										切换为编辑登录..
-									</a>
-								</li>
+								<!--<li>-->
+									<!--<a href="#">-->
+										<!--<i class="btn btn-xs btn-primary icon-user"></i>-->
+										<!--切换为编辑登录..-->
+									<!--</a>-->
+								<!--</li>-->
 
-								<li>
-									<a href="#">
-										<div class="clearfix">
-											<span class="pull-left">
-												<i class="btn btn-xs no-hover btn-success icon-shopping-cart"></i>
-												新订单
-											</span>
-											<span class="pull-right badge badge-success">+8</span>
-										</div>
-									</a>
-								</li>
+								<!--<li>-->
+									<!--<a href="#">-->
+										<!--<div class="clearfix">-->
+											<!--<span class="pull-left">-->
+												<!--<i class="btn btn-xs no-hover btn-success icon-shopping-cart"></i>-->
+												<!--新订单-->
+											<!--</span>-->
+											<!--<span class="pull-right badge badge-success">+8</span>-->
+										<!--</div>-->
+									<!--</a>-->
+								<!--</li>-->
 
-								<li>
-									<a href="#">
-										<div class="clearfix">
-											<span class="pull-left">
-												<i class="btn btn-xs no-hover btn-info icon-twitter"></i>
-												粉丝
-											</span>
-											<span class="pull-right badge badge-info">+11</span>
-										</div>
-									</a>
-								</li>
+								<!--<li>-->
+									<!--<a href="#">-->
+										<!--<div class="clearfix">-->
+											<!--<span class="pull-left">-->
+												<!--<i class="btn btn-xs no-hover btn-info icon-twitter"></i>-->
+												<!--粉丝-->
+											<!--</span>-->
+											<!--<span class="pull-right badge badge-info">+11</span>-->
+										<!--</div>-->
+									<!--</a>-->
+								<!--</li>-->
 
-								<li>
-									<a href="#">
-										查看所有通知
-										<i class="icon-arrow-right"></i>
-									</a>
-								</li>
-							</ul>
-						</li>
+								<!--<li>-->
+									<!--<a href="#">-->
+										<!--查看所有通知-->
+										<!--<i class="icon-arrow-right"></i>-->
+									<!--</a>-->
+								<!--</li>-->
+							<!--</ul>-->
+						<!--</li>-->
 
-						<li class="light-blue">
+						<li >
 							<a data-toggle="dropdown" href="#" class="dropdown-toggle">
 								<img class="nav-user-photo" src="../components/images/user.jpg" alt="Jason's Photo" />
 								<span class="user-info">
@@ -267,10 +267,12 @@
 
 		<script src="../components/javascripts/angular.min.js"></script>
 		<script src="../components/javascripts/angular-ui-router.min.js"></script>
+		<script src="../components/javascripts/ocLazyLoad.min.js"></script>
 
 		<!--全局常量-->
 		<script src="../components/javascripts/globalset/globalset.js"></script>
-
+		<script src="../components/javascripts/config.lazyload.js"></script>
+		<script src="../components/javascripts/config.router.js"></script>
 		<!-- inline scripts related to this page -->
 		<script src="../components/javascripts/controllers/indexController.js"></script>
 		<script src="../components/javascripts/index.js"></script>
