路由配置修改 config.lazylod.js是路由需要加载的静态css、js的配置文件 config.router.js为路由配置文件

--- a/tpls/user/userList.html
+++ b/tpls/user/userList.html
@@ -18,9 +18,9 @@
         </div>
     </div>
     <!--<script src="../../components/javascripts/jquery-2.0.3.min.js"></script>-->
-    <script src="../components/plugins/jqGrid/js/jquery.jqGrid.min.js"></script>
-    <script src="../components/plugins/jqGrid/js/grid.addons.js"></script>
-    <script src="../components/plugins/jqGrid/js/grid.locale-cn.js"></script>
+    <!--<script src="../../components/plugins/jqGrid/js/jquery.jqGrid.min.js"></script>-->
+    <!--<script src="../../components/plugins/jqGrid/js/grid.addons.js"></script>-->
+    <!--<script src="../../components/plugins/jqGrid/js/grid.locale-cn.js"></script>-->
     <script type="text/javascript">
         jQuery(function ($) {
             var table_url='userList.json';
