--- a/tpls/search.html
+++ b/tpls/search.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>知识库</title>
-    <link rel="stylesheet" href="../components/stylesheets/bootstrap.min.css"/>
-    <link rel="stylesheet" href="../components/plugins/toastr/toastr.css">
+    <!--<link rel="stylesheet" href="../components/stylesheets/bootstrap.min.css"/>-->
+    <!--<link rel="stylesheet" href="../components/plugins/toastr/toastr.css">-->
     <style>
         .myRow {
             width: 100%;
@@ -95,79 +95,11 @@
         </div>
     </div>
 </div>
-<script type="text/javascript" src="../components/javascripts/jquery-2.0.3.min.js"></script>
-<script type="text/javascript" src="../components/javascripts/bootstrap/bootstrap.min.js"></script>
-<script type="text/javascript" src="../components/javascripts/bootstrap/bootstrap-typeahead.js"></script>
-<script type="text/javascript" src="../components/plugins/toastr/toastr.min.js"></script>
-<script type="text/javascript" src="../components/javascripts/angular.min.js"></script>
-<script type="text/javascript" src="../components/javascripts/angular-sanitize.min.js"></script>
-<script>
-    var search = angular.module("search", ['ngSanitize']);
-    search.controller("searchController", ["$scope", "$http", function ($scope, $http) {
-        $scope.displayResult = true;
-        $scope.response = {
-            data: {
-                pageNum: 1
-            },
-        };
-        $scope.orderBy = "1";
-        $scope.order = "1";
-        $scope.isActive = function (page) {
-            if (page == $scope.response.data.pageNum)
-                return "active";
-            return "";
-        }
-        $scope.search = function (page) {
-            if (!page && page != 0)
-                page = 1;
-            if (page < 1 || page > $scope.response.data.pages) {
-                toastr.error("页码错误");
-                return;
-            }
-            if (!$scope.keyWord) {
-                toastr.error("关键字不能为空");
-                return;
-            }
-            $http({
-                method: "GET",
-                url: "http://localhost:8080/knowledgeRepo/repo/searchIndex.form?keyWord=" + $scope.keyWord
-                + "&page=" + page + "&orderBy=" + $scope.orderBy + "&order=" + $scope.order,
-            }).then(function successCallback(response) {
-                if (response.data.data.pages > 0) {
-                    $scope.response = response.data;
-                    $scope.displayResult = true;
-                    var pagers = [];
-                    var pageNum = $scope.response.data.pageNum;
-                    var totalPages = $scope.response.data.pages;
-                    for (var i = -4; i < 5; i++) {
-                        if (pageNum + i > 0 && pageNum + i <= totalPages)
-                            pagers.push(pageNum);
-                    }
-                    $scope.pagers = pagers;
-                } else {
-                    toastr.info("未查找到结果");
-                }
-
-            }, function errorCallback(response) {
-                toastr.error("数据加载失败");
-            });
-        };
-        jQuery('#keyWord').typeahead({
-            source: function (keyWord, process) {
-                jQuery.getJSON('http://localhost:8080/knowledgeRepo/repo/getInputHint.form', {"keyWord": keyWord}, function (response) {
-                    process(response.data);
-                });
-            },
-            updater: function (item) {
-                return item.replace(/<a(.+?)<\/a>/, ""); //这里一定要return，否则选中不显示
-            },
-            /*            afterSelect: function (item) {
-                            alert(item);
-                        },*/
-            items: 6, //显示6条
-            delay: 500 //延迟时间
-        });
-    }]);
-</script>
+<!--<script type="text/javascript" src="../components/javascripts/jquery-2.0.3.min.js"></script>-->
+<!--<script type="text/javascript" src="../components/javascripts/bootstrap/bootstrap.min.js"></script>-->
+<!--<script type="text/javascript" src="../components/javascripts/bootstrap/bootstrap-typeahead.js"></script>-->
+<!--<script type="text/javascript" src="../components/plugins/toastr/toastr.min.js"></script>-->
+<!--<script type="text/javascript" src="../components/javascripts/angular.min.js"></script>-->
+<!--<script type="text/javascript" src="../components/javascripts/angular-sanitize.min.js"></script>-->
 </body>
 </html>
