完成页面调整

--- a/tpls/search.html
+++ b/tpls/search.html
@@ -3,8 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <title>知识库</title>
-    <!--<link rel="stylesheet" href="../components/stylesheets/bootstrap.min.css"/>-->
-    <!--<link rel="stylesheet" href="../components/plugins/toastr/toastr.css">-->
     <style>
         .myRow {
             width: 100%;
@@ -59,10 +57,11 @@
                 <ul>
                     <li ng-repeat="result in response.data.list" class="resultItem">
                         <div class="result-header">
-                            <h3><a href="knowledgeDetail.html?detailId={{result.id}}" ng-bind-html="result.kTitle"></a>
+                            <h3><a href="index.html#!/knowledgeDetail.html?detailId={{result.id}}"
+                                   ng-bind-html="getTrustedHtml(result.kTitle)"></a>
                             </h3>
                         </div>
-                        <div class="result-body" ng-bind-html="result.kAnswer">
+                        <div class="result-body" ng-bind-html="getTrustedHtml(result.kAnswer)">
                         </div>
                         <div class="result-footer">
                             查看次数:{{result.kUseCount}}&nbsp;&nbsp;
@@ -75,18 +74,18 @@
         <div class="myRow" ng-show="displayResult">
             <div class="col-lg-12" style="text-align: center">
                 <ul class="pagination">
-                    <li><a href="#" style="width:42px;height: 42px;padding:0px;line-height:42px"
+                    <li><a style="width:42px;height: 42px;padding:0px;line-height:42px"
                            ng-click="search(response.data.pageNum-1)"
                     >&laquo;</a></li>
-                    <li ng-repeat="pager in pagers"><a href="#" ng-class="isActive(pager)" ng-click="search(pager)"
+                    <li ng-repeat="pager in pagers" ng-class="isActive(pager)"><a ng-click="search(pager)"
                                                        style="width:42px;height: 42px;padding:0px;line-height:42px">{{pager}}</a>
                     </li>
-                    <li><a href="#" style="width:42px;height: 42px;padding:0px;line-height:42px"
+                    <li><a style="width:42px;height: 42px;padding:0px;line-height:42px"
                            ng-click="search(response.data.pageNum+1)"
                     >&raquo;</a></li>
                     <li style="width:42px;height: 42px;padding:0px;line-height:42px">{{response.data.pages}}页</li>
                     <li><input type="number" style="height: 32px;width: 60px;padding:0px" ng-model="jumpToPage"
-                               value="1"></li>
+                    ></li>
                     <li>
                         <button class="btn btn-primary" ng-click="search(jumpToPage)">跳转</button>
                     </li>
@@ -95,11 +94,5 @@
         </div>
     </div>
 </div>
-<!--<script type="text/javascript" src="../components/javascripts/jquery-2.0.3.min.js"></script>-->
-<!--<script type="text/javascript" src="../components/javascripts/bootstrap/bootstrap.min.js"></script>-->
-<!--<script type="text/javascript" src="../components/javascripts/bootstrap/bootstrap-typeahead.js"></script>-->
-<!--<script type="text/javascript" src="../components/plugins/toastr/toastr.min.js"></script>-->
-<!--<script type="text/javascript" src="../components/javascripts/angular.min.js"></script>-->
-<!--<script type="text/javascript" src="../components/javascripts/angular-sanitize.min.js"></script>-->
 </body>
 </html>
