--- a/tpls/knowledgeDetail.html
+++ b/tpls/knowledgeDetail.html
@@ -3,11 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>解答详细</title>
-    <!--<link rel="stylesheet" href="../components/stylesheets/bootstrap.min.css"/>-->
-    <!--<link rel="stylesheet" href="../components/plugins/toastr/toastr.css">-->
     <style>
         .item {
             margin: 15px 0;
+            height: 53px;
         }
     </style>
 </head>
@@ -72,16 +71,11 @@
     </div>
     <div class="row item">
         <div class="col-lg-10 col-lg-offset-1">
-            <a href="search.html" class="btn-lg btn-success">
+            <a href="index.html#!/search.html" class="btn btn-lg btn-success">
                 返回
             </a>
         </div>
     </div>
 </div>
-<!--<script type="text/javascript" src="../components/javascripts/jquery-2.0.3.min.js"></script>-->
-<!--<script type="text/javascript" src="../components/javascripts/bootstrap/bootstrap.min.js"></script>-->
-<!--<script type="text/javascript" src="../components/plugins/toastr/toastr.min.js"></script>-->
-<!--<script type="text/javascript" src="../components/javascripts/angular.min.js"></script>-->
-
 </body>
 </html>
