--- a/tpls/knowledgeDetail.html
+++ b/tpls/knowledgeDetail.html
@@ -8,69 +8,39 @@
             margin: 15px 0;
             height: 53px;
         }
+
+        .secondTitle li {
+            float: left;
+            list-style: none;
+            margin-right: 10px;
+        }
     </style>
 </head>
 <body ng-app="detail">
 <div class="container" ng-controller="detailController">
     <div class="row item">
-        <div class="col-lg-1">
-            标题
+        <div class="col-lg-12">
+            <h3><b>{{response.kTitle}}</b></h3>
         </div>
-        <div class="col-lg-10 input-group">
-            <input type="text" disabled class="form-control" ng-model="response.kTitle"/>
+    </div>
+    <div class="row item" style="border-bottom: solid 1px silver">
+        <div class="col-lg-12">
+            <ul class="secondTitle">
+                <li>创建人:<b>{{response.createUserId}}</b></li>
+                <li>创建时间:<b>{{response.createTime}}</b></li>
+                <li>审批人:<b>{{response.kApprUserId}}</b></li>
+                <li>审批时间:<b>{{response.kApprTime}}</b></li>
+                <li>查看次数:<b>{{response.kUseCount}}</b></li>
+            </ul>
         </div>
     </div>
     <div class="row item">
-        <div class="col-lg-1">
-            创建人
-        </div>
-        <div class="col-lg-10 input-group">
-            <input type="text" disabled class="form-control" ng-model="response.createUserId"/>
+        <div class="col-lg-12" ng-bind-html="getTrustedHtml(response.kAnswer)" style="border-bottom: solid 1px silver"
+             >
         </div>
     </div>
     <div class="row item">
-        <div class="col-lg-1">
-            创建时间
-        </div>
-        <div class="col-lg-10 input-group">
-            <input type="datetime" disabled class="form-control" ng-model="response.createTime">
-        </div>
-    </div>
-    <div class="row item">
-
-        <div class="col-lg-1">
-            审批人
-        </div>
-        <div class="col-lg-10">
-            <input type="text" disabled class="form-control" ng-model="response.kApprUserId">
-        </div>
-    </div>
-    <div class="row item">
-        <div class="col-lg-1">
-            审批时间
-        </div>
-        <div class="col-lg-10">
-            <input type="datetime" disabled class="form-control" ng-model="response.kApprTime">
-        </div>
-    </div>
-    <div class="row item">
-        <div class="col-lg-1">
-            使用次数
-        </div>
-        <div class="col-lg-10">
-            <input type="number" disabled class="form-control" ng-model="response.kUseCount">
-        </div>
-    </div>
-    <div class="row item">
-        <div class="col-lg-1">
-            知识解答
-        </div>
-        <div class="col-lg-10">
-            <textarea disabled style="width:100%;height: 100px" ng-model="response.kAnswer"></textarea>
-        </div>
-    </div>
-    <div class="row item">
-        <div class="col-lg-10 col-lg-offset-1">
+        <div class="col-lg-12">
             <a href="index.html#!/search.html" class="btn btn-lg btn-success">
                 返回
             </a>
