--- a/tpls/knowledgeRepo/knowledgeList.html
+++ b/tpls/knowledgeRepo/knowledgeList.html
@@ -144,14 +144,14 @@
     $(document).ready(function () {
         $("#grid-table").jqGrid({
 
-            url: "http://localhost:8080/knowledgeRepo/page.form",
+            url: "http://localhost:8080/knowledgeRepo/selectPage.form",
            // url:'header("Access-Control-Allow-Origin：http://www.test2.com")',
 
             mtype: "GET",
             //data: grid_data, //当 datatype 为"local" 时需填写
             datatype: "json", //数据来源，本地数据（local，json,jsonp,xml等）
 //            jsonp:"callback",
-            height: 200, //高度，表格高度。可为数值、百分比或'auto'
+            height: "auto", //高度，表格高度。可为数值、百分比或'auto'
 
             colNames: ['知识id', '知识标题', '知识解答', '使用次数', '最后一次使用时间', '审批状态', '审批人', '审批时间', '审批意见', '创建人', '创建时间'],
             colModel: [
@@ -207,16 +207,70 @@
             caption: "知识管理", //表名
             autowidth: true, //自动宽
 //
-            repeatitems: true,
+            repeatitems: false,
             jsonReader: {
 
-                root:"rows",
-                page: "page",
-                total: "total",
-                records: "records"
+                root:"content",
+                page: "currentPage",
+                total: "totalPages",
+                records: "totalCounts"
             }
         });
 //浏览导航栏添加功能部分代码
+
+//        jQuery(grid_selector)
+//
+//            .navGrid(pager_selector,{edit:false,add:false,del:false,search:false})
+//
+//            .navButtonAdd(pager_selector,{
+//
+//                caption:"Add",
+//
+//                buttonicon:"ui-icon-add",
+//
+//                onClickButton: function(){
+//
+//                    alert("Adding Row");
+//                    location.href="index.html?_ijt=66mhc10j5084fqriliqmikc2jh#!/aa.html"
+//                },
+//
+//                position:"last"
+//
+//            })
+//
+//            .navButtonAdd(pager_selector,{
+//
+//                caption:"Del",
+//
+//                buttonicon:"ui-icon-del",
+//
+//                onClickButton: function(){
+//
+//                    alert("Deleting Row");
+//
+//                },
+//
+//                position:"last"
+//
+//            });
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
         $(grid_selector).navGrid(pager_selector, {
                 search: true, // 检索
                 editicon: 'icon-pencil blue',
@@ -229,7 +283,9 @@
                 refresh: true, //刷新
                 refreshicon : 'icon-refresh green'
             }, {
-                url: "http://localhost:8080/knowledgeRepo/page.form",
+                onClickButton: function(){
+                    alert("Deleting Row");
+                }
 
 //                //afterShowForm:afterShowEdit,
 //                 afterSubmit:processAddEdit ,
@@ -243,8 +299,24 @@
             {}, // delete options
             {
                 multipleSearch: true
-            } // search options - define multiple search
-        );
+            });
+
+//        $(grid_selector).navButtonAdd(pager_selector,{
+//            caption:"Del",
+//            buttonicon:"ui-icon-add",
+//            onClickButton: function(){
+//                alert("Deleting Row");
+//                //location.href="www.baidu.com"
+//            },
+//            position:"fist"
+//        });
+
+//        ).jqGrid('navButtonAdd',"#UsersGridPager",{
+//            caption:"NewButton",
+//            buttonicon:"ui-icon-newwin",
+//            onClickButton:null,
+//            position: "last", title:"",
+//            cursor: "pointer"});
 
         function style_edit_form(form) {
             //enable datepicker on "sdate" field and switches for "stock" field
