--- a/tpls/knowledgeAdd.html
+++ b/tpls/knowledgeAdd.html
@@ -109,7 +109,7 @@
 
     <label>
         <span>创建时间 :</span>
-        <input id="createTime" type="email" name="createTime" placeholder="填写创建时间" />
+        <input id="createTime" type="datetime-local" name="createTime" placeholder="2015/03/27 10:41" />
     </label>
     <label>
         <span>知识解答 :</span>
