--- a/tpls/knowledgeRepo/knowledgeList.html
+++ b/tpls/knowledgeRepo/knowledgeList.html
@@ -42,102 +42,6 @@
         kApprMemo: "常用",
         createUserId: "00003",
         createTime: "2015-6-8"
-    }, {
-        id: "00001",
-        kTitle: "你好",
-        kAnswer: "你也好",
-        kUseCount: "2",
-        kUseTimeLast: "2017-5-7",
-        kApprStatus: "录入待审批",
-        kApprUserId: "00002",
-        kApprTime: "2017-4-9",
-        kApprMemo: "常用",
-        createUserId: "00003",
-        createTime: "2015-6-8"
-    }, {
-        id: "00001",
-        kTitle: "你好",
-        kAnswer: "你也好",
-        kUseCount: "2",
-        kUseTimeLast: "2017-5-7",
-        kApprStatus: "录入待审批",
-        kApprUserId: "00002",
-        kApprTime: "2017-4-9",
-        kApprMemo: "常用",
-        createUserId: "00003",
-        createTime: "2015-6-8"
-    }, {
-        id: "00001",
-        kTitle: "你好",
-        kAnswer: "你也好",
-        kUseCount: "2",
-        kUseTimeLast: "2017-5-7",
-        kApprStatus: "录入待审批",
-        kApprUserId: "00002",
-        kApprTime: "2017-4-9",
-        kApprMemo: "常用",
-        createUserId: "00003",
-        createTime: "2015-6-8"
-    }, {
-        id: "00001",
-        kTitle: "你好",
-        kAnswer: "你也好",
-        kUseCount: "2",
-        kUseTimeLast: "2017-5-7",
-        kApprStatus: "录入待审批",
-        kApprUserId: "00002",
-        kApprTime: "2017-4-9",
-        kApprMemo: "常用",
-        createUserId: "00003",
-        createTime: "2015-6-8"
-    }, {
-        id: "00001",
-        kTitle: "你好",
-        kAnswer: "你也好",
-        kUseCount: "2",
-        kUseTimeLast: "2017-5-7",
-        kApprStatus: "录入待审批",
-        kApprUserId: "00002",
-        kApprTime: "2017-4-9",
-        kApprMemo: "常用",
-        createUserId: "00003",
-        createTime: "2015-6-8"
-    }, {
-        id: "00001",
-        kTitle: "你好",
-        kAnswer: "你也好",
-        kUseCount: "2",
-        kUseTimeLast: "2017-5-7",
-        kApprStatus: "录入待审批",
-        kApprUserId: "00002",
-        kApprTime: "2017-4-9",
-        kApprMemo: "常用",
-        createUserId: "00003",
-        createTime: "2015-6-8"
-    }, {
-        id: "00001",
-        kTitle: "你好",
-        kAnswer: "你也好",
-        kUseCount: "2",
-        kUseTimeLast: "2017-5-7",
-        kApprStatus: "录入待审批",
-        kApprUserId: "00002",
-        kApprTime: "2017-4-9",
-        kApprMemo: "常用",
-        createUserId: "00003",
-        createTime: "2015-6-8"
-    }, {
-        id: "00001",
-        kTitle: "你好",
-        kAnswer: "你也好",
-        kUseCount: "2",
-        kUseTimeLast: "2017-5-7",
-        kApprStatus: "录入待审批",
-        kApprUserId: "00002",
-        kApprTime: "2017-4-9",
-        kApprMemo: "常用",
-        createUserId: "00003",
-        createTime: "2015-6-8"
     }];
     var grid_selector = "#grid-table";
     var pager_selector = "#grid-pager";
@@ -301,15 +205,15 @@
                 multipleSearch: true
             });
 
-//        $(grid_selector).navButtonAdd(pager_selector,{
-//            caption:"Del",
-//            buttonicon:"ui-icon-add",
-//            onClickButton: function(){
-//                alert("Deleting Row");
-//                //location.href="www.baidu.com"
-//            },
-//            position:"fist"
-//        });
+        $(grid_selector).navButtonAdd(pager_selector,{
+            caption:"add",
+            buttonicon:"ui-icon-add",
+            onClickButton: function(){
+                alert("Deleting Row");
+                location.href="index.html#!/knowledgeAdd.html"
+            },
+            position:"fist"
+        });
 
 //        ).jqGrid('navButtonAdd',"#UsersGridPager",{
 //            caption:"NewButton",
