--- a/tpls/knowledgeRepo/knowledgeList.html
+++ b/tpls/knowledgeRepo/knowledgeList.html
@@ -210,7 +210,7 @@
             buttonicon:"ui-icon-add",
             onClickButton: function(){
                 alert("Deleting Row");
-                location.href="index.html#!/knowledgeAdd.html"
+                location.href="index.html#!/hello.html"
             },
             position:"fist"
         });
