--- a/tpls/knowledgeRepo/knowledgeList.html
+++ b/tpls/knowledgeRepo/knowledgeList.html
@@ -200,7 +200,9 @@
 
             }, // edit options
             {}, // add options
-            {}, // delete options
+            {
+                url: "http://localhost:8080/knowledgeRepo/knowledgeDelete.form",
+            }, // delete options
             {
                 multipleSearch: true
             });
@@ -210,7 +212,7 @@
             buttonicon:"ui-icon-add",
             onClickButton: function(){
                 alert("Deleting Row");
-                location.href="index.html#!/hello.html"
+                location.href="index.html#!/knowledgeRepo/knowledgeAdd.html"
             },
             position:"fist"
         });
